Draft for committee before defense

--- a/abstract.tex
+++ b/abstract.tex
@@ -20,10 +20,12 @@ through an adaptive boundary coupling algorithm. This algorithm allows the solve
 transport correction parameters and preserve smooth neutron flux gradients across the interface.
 In 1-D, 2-D, and 3-D $k$-eigenvalue simulations, the hybrid method produced accurate control
 rod worth estimates, relative to reference neutron transport solutions and experimental data,
-at approximately four times the cost of the neutron diffusion method.
-Demonstrations of the hybrid method for time-dependent rod drop and reactivity insertion
-simulations also perfomed well in reproducing expected trends observed in experimental data.
+at approximately four times the computational cost of the neutron diffusion method.
+%Demonstrations of the hybrid method for time-dependent rod drop and reactivity insertion
+%simulations also performed well in reproducing expected trends observed in experimental data.
+A demonstration of the hybrid method for a time-dependent rod drop
+simulation also performed well in reproducing expected trends observed in experimental data.
 Analysis of its computational performance indicated the possibility of further optimizations
 beyond its current implementation. With the hybrid method's spatial resolution and
 efficient computational performance, Moltres could enable accurate and cost-effective simulations
-of asymmetric transient in \glspl{MSR}.
+of asymmetric transients in \glspl{MSR}.
