--- a/introduction.tex
+++ b/introduction.tex
@@ -313,8 +313,8 @@ The scope of this dissertation can be divided into two main objectives.
 
 %  \item \textbf{Development of a novel hybrid $S_N$-diffusion method for improved control rod modeling in Moltres}
 
-    The second objective is to
-    develop a novel hybrid $S_N$-diffusion method for accurate control rod modeling in
+    The second objective is to develop, implement, and demonstrate a novel hybrid $S_N$-diffusion
+    method for accurate control rod modeling in
     time-dependent \gls{MSR} analyses. The hybrid method uses the discrete ordinates ($S_N$)
     neutron transport method to generate transport corrections in regions near control rods for
     drift correction terms in modified neutron diffusion equations. The $S_N$ method is applied on
@@ -341,9 +341,11 @@ $k_\text{eff}$ and rod worth calculations through
 $k$-eigenvalue simulations of 1-D, 2-D, and 3-D \gls{MSRE} models. The hybrid method is verified
 against reference results from OpenMC Monte Carlo neutron transport code and \gls{MSRE}
 experimental data.
-Chapter 6 presents the demonstration of the hybrid $S_N$-diffusion method in time-dependent
-reactivity-initiated simulations modeling the \gls{MSRE} rod drop and reactivity insertion
-experiments.
+%Chapter 6 presents the demonstration of the hybrid $S_N$-diffusion method in time-dependent
+%reactivity-initiated simulations modeling the \gls{MSRE} rod drop and reactivity insertion
+%experiments.
+Chapter 6 presents a demonstration of the hybrid $S_N$-diffusion method in a time-dependent
+reactivity-initiated simulation modeling a \gls{MSRE} rod drop experiment.
 Chapter 7 concludes this dissertation by summarizing the results presented, identifying limitations
 in this work, and providing potential research directions to address those limitations or extend
 this work.
