--- a/main.tex
+++ b/main.tex
@@ -85,8 +85,8 @@
 \author{Sun Myung Park}
 \department{Nuclear, Plasma \& Radiological Engineering}
 \degreeyear{2024}
-\committee{Associate Professor Kathryn D. Huff, Chair \& Co-Director of Research \\
-           Assistant Professor Madicken Munk, Co-Director of Research, Oregon State University \\
+\committee{Associate Professor Kathryn D. Huff, Co-Chair \\
+           Assistant Professor Madicken Munk, Co-Chair \\
            Professor Rizwan Uddin \\
            Professor Tomasz Kozlowski \\
            Professor Paul Fischer}
